[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["flutterdjango <abc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
pep8 = "^1.7.1"
autopep8 = "^1.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
